crates/mun_codegen/src/snapshots/mun_codegen__test__negate_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn negate(a: i64) -> i64 { -a }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i64 @negate(i64 %0) {
body:
  %neg = sub i64 0, %0
  ret i64 %neg
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
