crates/mun_codegen/src/snapshots/mun_codegen__test__nested_private_fn.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    fn nested_private_fn() -> i32 {\n        1\n    }\n\n    fn private_fn() -> i32 {\n        nested_private_fn()\n    }\n\n    pub fn main() -> i32 {\n        private_fn()\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @nested_private_fn() {
body:
  ret i32 1
}

define i32 @private_fn() {
body:
  %nested_private_fn = call i32 @nested_private_fn()
  ret i32 %nested_private_fn
}

define i32 @main() {
body:
  %private_fn = call i32 @private_fn()
  ret i32 %private_fn
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
