crates/mun_codegen/src/snapshots/mun_codegen__test__private_fn_only.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    fn private_main() {\n        let a = 1;\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

define void @private_main() {
body:
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"
