crates/mun_codegen/src/snapshots/mun_codegen__test__return_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main() -> i32 {\n        return 5;\n        let a = 3; // Nothing regarding this statement should be in the IR\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'fileir:mod'
source_filename = "fileir:mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @main() {
body:
  ret i32 5
}

; == GROUP IR (mod) ====================================
; ModuleID = 'filegroupir:mod'
source_filename = "filegroupir:mod"

@global_type_lookup_table = global [1 x i64*] zeroinitializer
